fix overflowed photo album

--- a/source/DailyOverview/DailyStyles.css
+++ b/source/DailyOverview/DailyStyles.css
@@ -23,7 +23,7 @@ body {
     background-color: var(--bg-color);
     display: grid;
     justify-items: stretch;
-    grid-template-columns: 30% 10% 17%;
+    grid-template-columns: 30% 10% 25%;
 
     /* mess around by removing one column/row of the grid*/
     grid-template-areas:
@@ -149,6 +149,7 @@ h2 {
     grid-area: note;
     background-color: white;
     margin: 1vw;
+    margin-bottom: 0.5vw;
     padding: 1vw;
     border-radius: 2vw;
     border-style: solid;
@@ -246,6 +247,8 @@ h2 {
     grid-area: album;
     background-color: white;
     margin: 1vw;
+    margin-top: 0.5vw;
+    height: 38.5vh;
     padding-left: 0.8vw;
     padding-right: 0.8vw;
     border-radius: 2vw;
@@ -263,7 +266,7 @@ h2 {
 #myCanvas {
     border: 2px solid #000000;
     width: 100%;
-    height: 70%;
+    height: 65%;
 }
 
 button#left,
@@ -280,8 +283,8 @@ button#right {
     cursor: pointer;
 }
 
-#save,
-#delete {
+#save{
+    position: absolute;
     height: fit-content;
     background-color: white;
     color: #38b593;
@@ -290,6 +293,20 @@ button#right {
     box-shadow: none;
     border-color: white;
     border-style: solid;
+    right: 6.5vw;
+}
+
+#delete {
+    position: absolute;
+    height: fit-content;
+    background-color: white;
+    color: #38b593;
+    border-color: white;
+    font-size: 1.5vh;
+    box-shadow: none;
+    border-color: white;
+    border-style: solid;
+    right: 2.5vw;
 }
 
 #save:hover,
